--- a/TraceVisualApp/TraceVisualApp.Android/TraceVisualApp.Android.csproj
+++ b/TraceVisualApp/TraceVisualApp.Android/TraceVisualApp.Android.csproj
@@ -52,7 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.6.0.344457" />
+    <PackageReference Include="Xamarin.Forms" Version="3.6.1-debug" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v4" Version="28.0.0.1" />
@@ -62,7 +62,7 @@
     <PackageReference Include="Xamarin.Android.Support.CustomTabs" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
     <PackageReference Include="Xamarin.Forms.Visual.Material">
-      <Version>3.6.0.344457</Version>
+      <Version>3.6.1-debug</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
