--- a/TraceVisualApp/TraceVisualApp.iOS/TraceVisualApp.iOS.csproj
+++ b/TraceVisualApp/TraceVisualApp.iOS/TraceVisualApp.iOS.csproj
@@ -136,10 +136,10 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.6.0.344457" />
+    <PackageReference Include="Xamarin.Forms" Version="3.6.1-debug" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
     <PackageReference Include="Xamarin.Forms.Visual.Material">
-      <Version>3.6.0.344457</Version>
+      <Version>3.6.1-debug</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
